# porquinho

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: build.sh
src/: cli.rs  crypto.rs  main.rs  vault.rs
src/commands/: create.rs  help.rs  list.rs  mod.rs  remove.rs  show.rs  update.rs
